[project]
name = "nonebot-plugin-buy"
version = "1.0"
authors = [
  {email = "1309946582@qq.com"},
  {name = "QiYork"}
]
description = "nonebot-plugin-buy"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "nonebot2<3.0.0,>=2.0.0",
    "nonebot-adapter-onebot<3.0.0,>=2.2.2",
    "nonebot-plugin-apscheduler<1.0.0,>=0.3.0",
    "pydantic<3.0.0,>=1.10.13",
]

[project.urls]
"Homepage" = "https://github.com/Onimaimai/nonebot-plugin-buy"
